--- a/StarProject/Views/Product/_ProductRows.cshtml
+++ b/StarProject/Views/Product/_ProductRows.cshtml
@@ -39,7 +39,7 @@
                         .FirstOrDefault()?.Image ?? "")"
                     data-bs-toggle="offcanvas"
                     data-bs-target="#offcanvasDetail">
-                詳細內容
+                預覽頁面
             </button>
         </td>
     </tr>
